Comment Clear / BG image change

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .intro-2 {
-    background: url("https://mdbootstrap.com/img/Photos/Others/img (50).jpg")no-repeat center center;
+    background: url("https://media12.s-nbcnews.com/j/MSNBC/Components/Video/202006/tdy_news_guth_violence_200602_1920x1080.focal-760x428.jpg")no-repeat center center;
     background-size: cover;
 }
 html,
