NEW NEW background image for front page

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .intro-2 {
-    background: url("https://media12.s-nbcnews.com/j/MSNBC/Components/Video/202006/tdy_news_guth_violence_200602_1920x1080.focal-760x428.jpg")no-repeat center center;
+    background: url("https://www.document.no/wp-content/uploads/2020/06/ntb-6-co0tkmwq4.jpg")no-repeat center center;
     background-size: cover;
 }
 html,
