Add body to covid.html, add base thing, some custom css for jumbos

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
 .intro-3 {
     background: url("https://images.unsplash.com/flagged/photo-1584036561584-b03c19da874c?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9")no-repeat center center;
     background-size: cover;
+
+.jumbo-p {
+  font-size: 20px;
+}
+
 }
 html,
 body,
